# apiary-rs

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
core/: Cargo.toml  README.md  build.rs
core/examples/: audio_interface.rs  common.rs  display_module.rs  envelope.rs  filter.rs  manager.rs  midi.rs  midi_to_cv.rs  mixer.rs  module_template.rs  oscillator.rs  oscillator_multi.rs  oscilloscope.rs  reverb.rs
core/src/: dsp.rs  leader_election.rs  lib.rs  ping_patch.rs  socket_local.rs  socket_native.rs  socket_smoltcp.rs
core/src/dsp/: filters.rs  mod.rs  oscillators.rs
src/: leader_election.rs  lib.rs  main.rs  protocol.rs  smoltcp_socket.rs  ui.rs
stm32/: Cargo.toml  README.md
stm32/src/: apa102.rs  envelope.rs  filter.rs  lib.rs  main.rs  oscillator.rs  serial_logger.rs  ui.rs
