[package]
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "apiary"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
# panic-itm = "0.4"
fugit = "0.3"
log = "0.4.6"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.4.0"
heapless = { version = "0.7.0", features = ["serde"] }
managed = { version = "0.8.0", default-features = false }
nb = "1"

[dependencies.smoltcp]
version = "0.8.1"
default-features = false
features = [
    "medium-ethernet", "proto-ipv4", "socket-udp", "proto-igmp",
    "socket-dhcpv4"
]

[dependencies.stm32-eth]
git = "https://github.com/dsgruss/stm32-eth"
features = ["stm32f429", "smoltcp-phy"]
rev = "f3ff7fb"

# this lets you use `cargo fix`!
[[bin]]
name = "apiary"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
