[package]
name = "apiary-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.6"
rand_core = "0.6"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.4.0"

heapless = { version = "0.7.0", features = ["serde"] }
managed = { version = "0.8.0", default-features = false }
zerocopy = "0.6.1"

[dev-dependencies]
# Examples use a gui for the physical interface
eframe = { version = "0.18.0" }

[dependencies.smoltcp]
version = "0.8.1"
default-features = false
features = [
    "medium-ethernet", "proto-ipv4", "socket-udp", "proto-igmp",
    "socket-dhcpv4"
]
