[package]
name = "apiary-core"
version = "0.1.0"
edition = "2021"
autoexamples = false

[dependencies]
log = "0.4.6"
rand_core = "0.6"

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0.0"

heapless = { version = "0.7.0", features = ["serde"] }
managed = { version = "0.8.0", default-features = false }
zerocopy = "0.6.1"

libm = "0.2.2"
itertools = { version = "0.10.3", default-features = false }

palette = { version = "0.6.1", default-features = false, features = ["libm"] }

# ipconfig = { version = "0.3.0", optional = true }
local-ip-address = { version = "0.4.4", optional = true }
ipnet = { version = "2.5.0", optional = true }
socket2 = { version = "0.4.4", optional = true }
rand = { version = "0.8.1", optional = true }

lazy_static = { version = "1.4.0", optional = true }

[dependencies.smoltcp]
version = "0.8.1"
default-features = false
features = [
    "medium-ethernet", "proto-ipv4", "socket-udp", "proto-igmp",
    "socket-dhcpv4"
]
optional = true

[features]
std = []

network-smoltcp = ["smoltcp"]
network-native = ["std", "rand", "local-ip-address", "ipnet", "socket2"]
network-local = ["std", "rand", "lazy_static"]

default = ["network-native"]

[dev-dependencies]
# Examples use a gui for the physical interface
eframe = "0.18.0"
simple_logger = "2.1.0"
midir = "0.8.0"
cpal = "0.13.5"

[[example]]
name = "manager"
