[package]
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "apiary"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
# panic-itm = "0.4"
nb = "1"
stm32f4xx-hal = { version = "0.13", features = ["stm32f429"] }

fugit = "0.3"
log = "0.4.6"

heapless = { version = "0.7.0", features = ["serde"] }

[dependencies.apiary-core]
path = "../core"

[dependencies.stm32-eth]
git = "https://github.com/dsgruss/stm32-eth"
features = ["stm32f429", "smoltcp-phy"]
rev = "f3ff7fb"

# this lets you use `cargo fix`!
[[bin]]
name = "apiary"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
