[package]
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "apiary"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
# panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
# panic-itm = "0.4"
nb = "1"
stm32f4xx-hal = { version = "0.13", features = ["stm32f429"] }
embedded-hal = "0.2.7"

fugit = "0.3"
log = { version = "0.4.6", features = ["release_max_level_info"] }
palette = { version = "0.6.1", default-features = false, features = ["libm"] }
libm = "0.2.2"
itertools = { version = "0.10.3", default-features = false }
rand_core = "0.6"

heapless = { version = "0.7.0", features = ["serde"] }
hash32 = "0.3.0"

[dependencies.apiary-core]
path = "../core"
default-features = false
features = ["network-smoltcp"]

[dependencies.stm32-eth]
# git = "https://github.com/stm32-rs/stm32-eth"
path = "../../stm32-eth"
features = ["stm32f429", "smoltcp-phy"]
# rev = "df8b0f9"

# this lets you use `cargo fix`!
[[bin]]
name = "apiary"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
