[package]
authors = ["Daniel Gruss <dsgruss@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "apiary"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.6.0"
nb = "1"
stm32f4xx-hal = { version = "0.13", optional = true }
embedded-hal = "0.2.7"

# "release_max_level_off" to turn off
log = { version = "0.4.6", features = ["release_max_level_info"] }

fugit = "0.3"
hash32 = "0.3.0"
heapless = { version = "0.7.0", features = ["serde"] }
itertools = { version = "0.10.3", default-features = false }
libm = "0.2.2"
palette = { version = "0.6.1", default-features = false, features = ["libm"] }
rand_core = "0.6"

[dependencies.apiary-core]
path = "../core"
default-features = false
features = ["network-smoltcp"]

[dependencies.stm32-eth]
# git = "https://github.com/stm32-rs/stm32-eth"
path = "../../stm32-eth"
optional = true
features = ["smoltcp-phy"]
# rev = "df8b0f9"

[features]

stm32f429 = ["stm32-eth/stm32f429", "stm32f4xx-hal/stm32f429"]
stm32f439 = ["stm32-eth/stm32f439", "stm32f4xx-hal/stm32f439"]

default = ["stm32f429"]

# this lets you use `cargo fix`!
[[bin]]
name = "apiary"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
